# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  compile.py  compile_commands.json  conanfile.txt  configure.py
data/day5/: test
day1/src/: dial.h  main  main.cpp
day2/src/: main  main.cpp
src/: CMakeLists.txt
src/_utils/: debug_utils.h  file_utils.cpp  file_utils.h  logic_utils.h  math_utils.h
src/day1/: dial.cpp  dial.h  main.cpp
src/day10/: main.cpp
src/day2/: main.cpp
src/day3/: main.cpp
src/day4/: main.cpp
src/day5/: main.cpp
src/day6/: main.cpp
src/day7/: main.cpp
src/day8/: main.cpp
src/day9/: main.cpp
src/utils/: file_utils.cpp  math_utils.cpp
utils/: file_utils.h
